# codeql-solana-analyzer-PoC

./: README.md
test-sealevel/: Cargo.toml  sealevel-vulnerabilities.sarif
test-sealevel/sealevel-security-db/: baseline-info.json  codeql-database.yml
test-sealevel/sealevel-security-db/db-rust/default/: abi_abi_strings.rel  abis.rel  addressable_crate_origins.rel  addressable_extended_canonical_paths.rel  adt_derive_macro_expansions.rel  arg_list_args.rel  arg_lists.rel  array_expr_internal_exprs.rel  array_expr_internal_is_semicolon.rel  array_expr_internals.rel  array_type_repr_const_args.rel  array_type_repr_element_type_reprs.rel  array_type_reprs.rel  assoc_item_list_assoc_items.rel  assoc_item_lists.rel  assoc_type_arg_generic_arg_lists.rel  assoc_type_arg_identifiers.rel  assoc_type_arg_type_bound_lists.rel  assoc_type_arg_type_reprs.rel  assoc_type_args.rel  attr_meta.rel  attrs.rel  binary_expr_lhs.rel  binary_expr_operator_names.rel  binary_expr_rhs.rel  binary_exprs.rel  block_expr_attrs.rel  block_expr_stmt_lists.rel  block_exprs.rel  call_expr_base_arg_lists.rel  call_expr_functions.rel  call_exprs.rel  callable_attrs.rel  callable_param_lists.rel  cast_expr_exprs.rel  cast_expr_type_reprs.rel  cast_exprs.rel  closure_expr_bodies.rel  closure_exprs.rel  comments.rel  (+358 more)
test-sealevel/sealevel-security-db/db-rust/default/pools/: poolInfo  (+1 more)
test-sealevel/sealevel-security-db/diagnostic/: cli-diagnostics-add-20250813T163032.733Z.json  cli-diagnostics-add-20250813T163032.783Z.json
test-sealevel/sealevel-security-db/results/: run-info-20250813.163521.383.yml
(+1032 files in other folders)
